packages/react-components/src/components/chip/chip.module.css
@layer components {
  .Chip {
    padding: token(--space-4) token(--space-8);
    border-radius: token(--radius-48);
    background-color: var(--highlight-gray-background);
    color: var(--highlight-gray-foreground);
    font-size: token(--font-size-16);
    block-size: token(--space-32);
    font-weight: 600;

    &[data-chip-dimension='small'] {
      block-size: token(--space-24);
      font-size: token(--font-size-14);
    }

    &[data-chip-dimension='big'] {
      font-size: token(--font-size-18);
    }

    &[data-chip-color='cyan'] {
      background-color: var(--highlight-cyan-background);
      color: var(--highlight-cyan-foreground);
    }

    &[data-chip-color='green'] {
      background-color: var(--highlight-green-background);
      color: var(--highlight-green-foreground);
    }

    &[data-chip-color='purple'] {
      background-color: var(--highlight-purple-background);
      color: var(--highlight-purple-foreground);
    }

    &[data-chip-color='yellow'] {
      background-color: var(--highlight-yellow-background);
      color: var(--highlight-yellow-foreground);
    }

    &[data-chip-color='red'] {
      background-color: var(--highlight-red-background);
      color: var(--highlight-red-foreground);
    }

    &[data-chip-color='blue'] {
      background-color: var(--highlight-blue-background);
      color: var(--highlight-blue-foreground);
    }

    &[data-chip-color='magenta'] {
      background-color: var(--highlight-magenta-background);
      color: var(--highlight-magenta-foreground);
    }

    &[data-chip-color='violet'] {
      background-color: var(--highlight-violet-background);
      color: var(--highlight-violet-foreground);
    }

    &[data-chip-color='indigo'] {
      background-color: var(--highlight-indigo-background);
      color: var(--highlight-indigo-foreground);
    }

    &[data-chip-color='mint'] {
      background-color: var(--highlight-mint-background);
      color: var(--highlight-mint-foreground);
    }

    &[data-chip-color='dipsy'] {
      background-color: var(--highlight-dipsy-background);
      color: var(--highlight-dipsy-foreground);
    }

    &[data-chip-color='salmon'] {
      background-color: var(--highlight-salmon-background);
      color: var(--highlight-salmon-foreground);
    }
  }

  .Action {
    display: inline-flex;
    appearance: none;
    border: 0;
    background: none;
    padding: 0;
    color: inherit;
    font: inherit;
    margin-top: 1px;
    cursor: pointer;
  }
}

